--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,135 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: "Digivolve";
+  src: url('../public/fonts/PixelDigivolve-mOm9.ttf');
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+  width: 100%;
+  min-height: 100vh;
+  margin: 0 auto;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  background-color: #074B88;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.container{
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+.img-fluid{
+  width: 100%;
+  height: auto;
+}
+
+.section{
+  margin-block: 2rem;
+}
+
+.digiGrid {
+  margin-block: 2rem;
+  width: 100%;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  /* place-items: center; */
+  white-space: nowrap;
+  /* animation: bannermove 10s linear infinite; */
+  /* animation: marquee 5s linear infinite; */
+}
+
+@keyframes marquee {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(-100%, 0);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.digidex-area img {
+  width: 200px;
+  height: 200px;  
+}
+
+.digiCard {
+
+  /* width: 100%; */
+  width: max-content;
+  
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* background-color: #082164; */
+  padding: 2rem 1.5rem;
+  border-radius: 16px;
+  
+  border: 10px solid #0E39B0;
+  background: rgb(255, 255, 255);
+  background: -moz-linear-gradient(315deg, rgba(255, 255, 255, 1) 8%, rgba(8, 33, 96, 1) 9%);
+  background: -webkit-linear-gradient(315deg, rgba(255, 255, 255, 1) 8%, rgba(8, 33, 96, 1) 9%);
+  background: linear-gradient(315deg, rgba(255, 255, 255, 1) 8%, rgba(8, 33, 96, 1) 9%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff", endColorstr="#082160", GradientType=1);
+  cursor: pointer;
+}
+
+
+.digiCard img{
+  transition: all .3s ease-in-out;
+  border: 10px solid #0E39B0;
+}
+
+.digiCard:hover img{
+  transform: scale(1.05);
+}
+
+
+@keyframes bannermove {
+  0% {
+    transform: translate(0, 0);
+  }
+
+  100% {
+    transform: translate(-10%, 0);
+  }
+}
+
+.digimonName {
+  text-align: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.digimonName p {
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  padding: .5rem;
+  background: rgb(255, 255, 255);
+  background: -moz-linear-gradient(315deg, rgba(255, 255, 255, 0) 8%, rgba(251, 168, 52, 1) 86%);
+  background: -webkit-linear-gradient(315deg, rgba(255, 255, 255, 0) 8%, rgba(251, 168, 52, 1) 86%);
+  background: linear-gradient(315deg, rgba(255, 255, 255, 0) 8%, rgba(251, 168, 52, 1) 86%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff", endColorstr="#fba834", GradientType=1);
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.digimonName h2 {
+  margin-block: 1rem;
+  background-color: #eee;
+  padding: .2rem 1rem;
+  -webkit-border-radius: 24px 0px 24px 0px;
+  -moz-border-radius: 24px 0px 24px 0px;
+  border-radius: 24px 0px 24px 0px;
+  text-align: center;
+  color: black;
+  border: 5px solid #0E39B0;
+  font-family: 'Digivolve';
 }
