--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+:root{
+  --digiGridFrags: 4;
+}
+
 @font-face {
   font-family: "Digivolve";
   src: url('../public/fonts/PixelDigivolve-mOm9.ttf');
@@ -8,8 +12,13 @@
   box-sizing: border-box;
 }
 
+#root{
+  width: 100%;
+}
+
 body {
   width: 100%;
+  max-width: 100%;
   min-height: 100vh;
   margin: 0 auto;
   font-size: 16px;
@@ -21,7 +30,7 @@ body {
 
 .container{
   max-width: 1024px;
-  margin: 0 auto;
+  margin-inline: 1rem;
 }
 
 .img-fluid{
@@ -38,13 +47,21 @@ body {
   width: 100%;
   overflow: hidden;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
-  /* place-items: center; */
-  white-space: nowrap;
-  /* animation: bannermove 10s linear infinite; */
-  /* animation: marquee 5s linear infinite; */
 }
+
+@media screen and (max-width: 1024px) {
+  .digiGrid{
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+  }
+}
+
+
+
 
 @keyframes marquee {
   0% {
@@ -56,8 +73,8 @@ body {
 }
 
 .digidex-area img {
-  width: 200px;
-  height: 200px;  
+  width: 100%;
+  height: auto;
 }
 
 .digiCard {
@@ -132,4 +149,20 @@ body {
   color: black;
   border: 5px solid #0E39B0;
   font-family: 'Digivolve';
+}
+
+.digimons-notfound{
+  margin-block: 1rem;
+  display: flex;
+  justify-content: center;
+  font-family: 'Digivolve';
+  font-size: 2rem;
+  color: rgba(251, 168, 52, 1);
+  -webkit-text-stroke: 1.5px black;
+}
+
+@media screen and (max-width: 992px) {
+  .digimons-notfound{
+    font-size: 1.5rem;
+  }
 }
